test/classes/errors/nilability-assign/assign-nonnil-owned-from-oknil-nil.good
assign-nonnil-owned-from-oknil-nil.chpl:8: error: Cannot assign to owned MyClass from nil
